
  o Fix to Rcmdr display font to improve appearance on some Macs (suggested by Milan Bouchet-Valat).

  o Modified start-up so that Commander window doesn't open twice when a plug-in is loaded via library() (adapting a suggestion by Milan Bouchet-Valat).

  o Various low-level changes for compatability with R devel (R 2.16.0).

  o Updated French translation (courtesy of Milan Bouchet-Valat).

  o Small interface and documentation tweaks and bug fixes.

Changes to Version 1.9-2

  o Updated Korean translation and getting-started document (thanks to Shin Jong-Hwa).

  o Updated Japanese getting-started document (thanks to Takaharu Araki).

  o Better icons for dialog buttons, new option to suppress these icons, other interface tweaks (after suggestions of Milan Bouchet-Valat).

  o Small fixs.

Changes to Version 1.9-1

  o Updated version of Getting Started With the R Commander.

  o Updated Italian translation (thanks to Stefano Calza).

  o Updated Japanese translation (thanks to Takaharu Araki).

  o Updated Korean translation and new Korean getting-started document (thanks to Shin Jong-Hwa).
 
  o Updated Polish translation (thanks to Lukasz Daniel)

  o Updated Romanian translation (thanks to Adrian Dusa).

  o Updated Russian translation (thanks to Alexey Shipunov).

  o Updated Slovenian translation (thanks to Jaro Lajovic and Matjaz Jeran).

  o Updated Spanish translation (thanks to Manuel Munoz Marquez).

  o Fixed omissions to R-Rcmdr.pot file (reported by Jaro Lajovic).

  o Small fixes.

Changes to Version 1.9-0

  o Improvements to boxplot dialog.

  o Improvements to save graphs dialogs (adapting suggestions of Milan Bouchet-Valat).

  o Added data import from SAS xport files (suggestion of Peter Mandeville).

  o Added ability to import Excel data sets generally via XLConnect package (suggestion of Michael Weylandt, only for Windows at this point).

  o Added IQR to numerical summaries and table of statistics (suggestion of Peter Mandeville).
